fixed overlapping buttons

--- a/style/apps.css
+++ b/style/apps.css
@@ -37,7 +37,7 @@
     position: absolute;
     bottom: 0px;
 }
-.app-card .right .icon-button {
+.app-card .right > .icon-button {
     position: absolute;
     bottom: 5px;
 }
